--- a/location/location.html
+++ b/location/location.html
@@ -46,7 +46,7 @@
           </aside>
           <!-- 컨텐츠 본문 영역 -->
           <div class="content">
-            <div class="sub-title"><span>Location</span></div>
+            <div class="sub-title"><span>Location test</span></div>
             <div class="inner">
               <div id="map" style="width:100%;height:350px;"></div>
             </div>
