--- a/location/location.html
+++ b/location/location.html
@@ -131,7 +131,7 @@
   marker.setMap(map);
 
   var iwContent = '<div class="marker-title">중앙직업전문학교 <br><a href="https://map.kakao.com/link/map/Hello World!,35.872272,128.597245" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/Hello World!,35.872272,128.597245" style="color:blue" target="_blank">길찾기</a></div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
-      iwPosition = new kakao.maps.LatLng(33.450701, 126.570667); //인포윈도우 표시 위치입니다
+      iwPosition = new kakao.maps.LatLng(35.872272,128.597245); //인포윈도우 표시 위치입니다
 
   // 인포윈도우를 생성합니다
   var infowindow = new kakao.maps.InfoWindow({
