notice.html,component.scss change

--- a/community/notice.html
+++ b/community/notice.html
@@ -62,57 +62,71 @@
                     <td>1</td>
                     <td>한샘몰</td>
                     <td>[공지] 한샘몰 시스템 점검 안내</td>
-                    <td>2022.11.07</td>
+                    <td>2022.11.11</td>
                     <td>15</td>
                   </tr>
                   <tr>
                     <td>2</td>
                     <td>한샘몰</td>
                     <td>[당첨자발표] 한샘몰 신혼침실 럭키드로우 당첨자 발표</td>
-                    <td>2022.11.07</td>
+                    <td>2022.11.11</td>
                     <td>150</td>
                   </tr>
                   <tr>
                     <td>3</td>
                     <td>한샘몰</td>
                     <td>[당첨자발표] 한샘 책장(샘책장, 티오책장)구매시 폴리 수납바스켓 증정이벤트 당첨자발표(2차)</td>
-                    <td>2022.11.07</td>
+                    <td>2022.11.11</td>
                     <td>179</td>
                   </tr>
                   <tr>
                     <td>4</td>
                     <td>한샘몰</td>
                     <td>[당첨자발표] 한샘 책장(샘책장, 티오책장)구매시 폴리 수납바스켓 증정이벤트 당첨자발표</td>
-                    <td>2022.11.07</td>
+                    <td>2022.11.11</td>
                     <td>130</td>
                   </tr>
                   <tr>
                     <td>5</td>
                     <td>한샘몰</td>
                     <td>[당첨자발표] 한샘몰 멤버스위크 럭키드로우 당첨안내</td>
-                    <td>2022.11.07</td>
+                    <td>2022.11.11</td>
                     <td>100</td>
                   </tr>
                   <tr>
                     <td>6</td>
                     <td>한샘몰</td>
                     <td>[당첨자 발표] 침실 슬리핑코드 매트리스 포토후기 이벤트 당첨자 발표</td>
-                    <td>2022.11.07</td>
+                    <td>2022.11.11</td>
                     <td>105</td>
                   </tr>
                   <tr>
                     <td>7</td>
                     <td>한샘몰</td>
                     <td>[당첨자발표] 한샘몰 멤버스위크 카트플렉스 2차 당첨안내</td>
-                    <td>2022.11.07</td>
+                    <td>2022.11.11</td>
                     <td>160</td>
                   </tr>
                   <tr>
                     <td>8</td>
                     <td>한샘몰</td>
                     <td>[당첨자발표] 한샘몰 멤버스위크 카트플렉스 1차 당첨안내</td>
-                    <td>2022.11.07</td>
+                    <td>2022.11.11</td>
                     <td>320</td>
+                  </tr>
+                  <tr>
+                    <td>9</td>
+                    <td>한샘몰</td>
+                    <td>[당첨자발표] 8월 한샘몰 새학기 이벤트 당첨안내</td>
+                    <td>2022.11.11</td>
+                    <td>260</td>
+                  </tr>
+                  <tr>
+                    <td>10</td>
+                    <td>한샘몰</td>
+                    <td>개인정보처리방침 변경 (2022. 08. 31 예정)</td>
+                    <td>2022.11.11</td>
+                    <td>170</td>
                   </tr>
                 </table>
                 <a href="#" class="gbtn right">글쓰기</a>
